Add interpolation with pipes, and config variable with question mark to set up setTimeout() to display app title, date and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,19 @@
 <div class="container mt-5">
   <nav class="row">
     <div class="nav-wrapper">
-      <span class="brand-logo center">{{title}}</span>
+      <span class="brand-logo center">{{config?.title | uppercase}}</span>
     </div>
   </nav>
   <div class="content">
     <div class="row">
-      <button class="btn col s2 offset-s10">Dodaj zadanie
+      <button class="btn col s2 offset-s10">New task
       </button>
-      <button class="btn col s2 offset-s10">Zakończ
+      <button class="btn col s2 offset-s10">Exit
       </button>
     </div>
 
     <div class="row">
-      <input class="col s8" type="text" placeholder="Dodaj zadanie i datę wykonania"/>
+      <input class="col s8" type="text" placeholder="Add task's name and a specific deadline"/>
       <input class="col s2 disabled" type="date"/>
       <button class="btn-floating">+
       </button>
@@ -22,7 +22,7 @@
     <ul class="collection">
       <li class="collection-item row">
           <span class="col s10">
-            1. Siłownia - 02.01 czwartek
+            1. Gym - 02.01 czwartek
           </span>
         <div class="col s2 right-align">
           <button class="btn-floating btn-small red mr-5">
@@ -34,20 +34,20 @@
         </div>
       </li>
       <li class="collection-item row">
-        <span class="col done">Sprzątnie strychu</span>
+        <span class="col done">Clean basement</span>
       </li>
     </ul>
 
-    <h1>Dzisiaj brak zadań :-)</h1>
+    <h1>Yaay, you are free today!</h1>
 
     <button class="btn red">
-      Wyczyść
+      Clean all
     </button>
   </div>
 
   <footer class="page-footer mt-5">
     <div class="footer-copyright">
-      <div class="container">{{getFooter()}}</div>
+      <div class="container">{{ config?.date | date: 'yyyy' }} {{config?.footer}}</div>
     </div>
   </footer>
 </div>
